@@ -1,3 +1,7 @@
+2009-03-31 09:00 Eric Viara
+
+	* Added topic collections/implementation
+
 2009-02-05 11:47 François Déchelle
 
 	* Added topic jodl
